--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | URP_2024</title>
+    <title>Unity WebGL Player | test02</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
   </head>
@@ -20,7 +20,7 @@
       <div id="unity-footer">
         <div id="unity-webgl-logo"></div>
         <div id="unity-fullscreen-button"></div>
-        <div id="unity-build-title">URP_2024</div>
+        <div id="unity-build-title">test02</div>
       </div>
     </div>
     <script>
@@ -56,14 +56,14 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/ee.loader.js";
+      var loaderUrl = buildUrl + "/e1.loader.js";
       var config = {
-        dataUrl: buildUrl + "/ee.data.gz",
-        frameworkUrl: buildUrl + "/ee.framework.js.gz",
-        codeUrl: buildUrl + "/ee.wasm.gz",
+        dataUrl: buildUrl + "/e1.data.unityweb",
+        frameworkUrl: buildUrl + "/e1.framework.js.unityweb",
+        codeUrl: buildUrl + "/e1.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
-        productName: "URP_2024",
+        productName: "test02",
         productVersion: "0.1",
         showBanner: unityShowBanner,
       };
